# chess-pyspec

./: .buildinfo  .gitignore  README.md  asyncio_server_test.py  client_usage.html  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pyspec.client.html  pyspec.file.html  pyspec.server.html  search.html  searchindex.js  server_usage.html
.doctrees/: client_usage.doctree  environment.pickle  getting_started.doctree  index.doctree  pyspec.client.doctree  pyspec.file.doctree  pyspec.server.doctree  server_usage.doctree
.github/workflows/: docs.yml  publish.yml  sdist.yml  test.yml  wheels.yml
_modules/: index.html
_modules/pyspec/_connection/: client_connection.html
_modules/pyspec/client/: _motor.html  _remote_property_table.html  _status.html  client.html
_modules/pyspec/file/: h5datasets.html  hamamatsu.html  hdf5.html  spec.html
_modules/pyspec/server/: _remote_function.html  _remote_property.html  server.html
_sources/: index.rst.txt  pyspec.client.rst.txt  pyspec.file.rst.txt  pyspec.server.rst.txt
docs/source/: client_usage.rst  conf.py  getting_started.rst  index.rst  server_usage.rst
pyspec/: __init__.py  _memory_table.py  _motor.py  _remote_function.py  _remote_property_table.py  _status.py  client.py  server.py
pyspec/_connection/: __init__.py  associative_array.py  client_connection.py  command.py  connection.py  data.py  data_types.py  header.py  message.py  protocol.py  server_connection.py
pyspec/client/: __init__.py  _motor.py  _output.py  _remote_property_table.py  _status.py  client.py
pyspec/file/: h5datasets.py  hamamatsu.py  hdf5.py  spec.py
pyspec/server/: __init__.py  _motor.py  _remote_function.py  _remote_property.py  server.py
pyspec/shared_memory/: README
test/: conftest.py  test_client.py  test_client_server.py  test_client_with_spec_server.py  test_protocol.py  test_protocol_version_mismatch.py  test_server.py
