[project]
name = "pyspec"
version = "0.0.1"
description = "Python SPEC modules and tools"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Kevin Welsh", email = "kevin.welsh@verdantevolution.com" }]
dependencies = ["cython>=3.2.3", "h5py>=3.15.1", "numpy", "pyee>=13.0.0"]

[tool.setuptools]
packages = ["pyspec", "pyspec.shared_memory", "pyspec._connection"]
ext-modules = [
    { name = "pyspec.shared_memory.shared_memory", sources = [
        "pyspec/shared_memory/datashm_py.c",
        "pyspec/shared_memory/sps.c",
    ], include-dirs = ["pyspec/shared_memory"] },
]

[tool.setuptools.package-data]
"pyspec.shared_memory" = ["*.h"]

[build-system]
requires = ["setuptools>=80.9.0", "wheel", "cython"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["pytest-asyncio>=1.3.0"]
