[project]
name = "pyspec"
version = "1.0.0"
description = "Python SPEC modules and tools"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Kevin Welsh", email = "kevin.welsh@verdantevolution.com" }]
dependencies = ["cython>=3.2.3", "h5py>=3.0.0", "numpy", "pyee>=13.0.0"]

[tool.setuptools]
packages = ["pyspec", "pyspec.shared_memory", "pyspec._connection"]
ext-modules = [
    { name = "pyspec.shared_memory.shared_memory", sources = [
        "pyspec/shared_memory/datashm_py.c",
        "pyspec/shared_memory/sps.c",
    ], include-dirs = ["pyspec/shared_memory"] },
]

[tool.setuptools.package-data]
"pyspec.shared_memory" = ["*.h"]

[build-system]
requires = ["setuptools>=80.9.0", "wheel", "cython"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "sphinx>=7.4.7",
    "sphinx-autodoc-typehints>=2.3.0",
    "sphinx-rtd-theme>=0.5.1",
]
test = ["pytest-asyncio>=1.2.0", "pytest-cov>=7.0.0", "pytest-timeout>=2.4.0"]

[tool.coverage.report]
omit = ["pyspec/shared_memory/**", "pyspec/file/**"]

[tool.coverage.run]
patch = ["subprocess"]

[tool.pytest]
timeout = 2
